--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Project First Web</title>
+    <style>
+      #title{
+        text-align: center;
+      }
+    </style>
   <head>
   <body>
-    <h1>Hey, I'm Rohan!</h1>
+    <h1 id = "title">Hey, I'm Rohan!</h1>
+    
   <body>
 <html>
